--- a/new.second.html
+++ b/new.second.html
@@ -11,7 +11,36 @@
     <h1>More Info</h1><br>
         <h2>Holiday updates</h2>
         <h3>Halloween update</h3>
-        <p>In this update</p>
+        <p>In this update <b>Cracky4</b><e>,the owner of the game</e>had added a bunch of new stuff.<br>
+           He had added,<br>
+            -Pumpkins scattered all around the map and now a source of light.<br>
+            -A new weapon called the <b>SCYTHE</b><br>
+            -A new item called candles.<br>
+            -houses scattered around the map<br>
+            -Carnival games<br>
+            -A maze<br>
+            -A wardrobe<br>
+            -dressed up cultists.<br>
+            -updated beds, log walls and much more<br>
+            -deer plush DLC.<br>
+            -Toy shelf<br>
+            -Witch class.<br>
+            -trick or treater class<br>
+            -potions and cauldrons<br>
+            -Vampire class<br>
+            -Vampire scythe<br>
+            -Vampire cloak<br>
+            -Bouncing blade<br>
+            -Lifesteal system<br>
+            <br>
+            and thats all. Cracky4 has really outdone himself with this update!<br>
+            now, lets further explain the new things he added in this update.<br>
+            first of all, the <b>SCYTHE</b> and <b>THE VAMPIRE SCYTHE</b>:<br>
+            The scythe is a very powerful weapon with custom animations and increased<br>
+            damage than normal axes and spears and much more weapons! It does 60<br>
+            damage per hit. The vampire scythe is
+        
+        </p>
         
     </body>
 </html>
